; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_int_set_limits.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_int_set_limits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_data = type { i32, i32, i32 }

@OBS_PROPERTY_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_property_int_set_limits(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.int_data*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @OBS_PROPERTY_INT, align 4
  %12 = call %struct.int_data* @get_type_data(i32* %10, i32 %11)
  store %struct.int_data* %12, %struct.int_data** %9, align 8
  %13 = load %struct.int_data*, %struct.int_data** %9, align 8
  %14 = icmp ne %struct.int_data* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %4
  br label %26

16:                                               ; preds = %4
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.int_data*, %struct.int_data** %9, align 8
  %19 = getelementptr inbounds %struct.int_data, %struct.int_data* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load %struct.int_data*, %struct.int_data** %9, align 8
  %22 = getelementptr inbounds %struct.int_data, %struct.int_data* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.int_data*, %struct.int_data** %9, align 8
  %25 = getelementptr inbounds %struct.int_data, %struct.int_data* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  br label %26

26:                                               ; preds = %16, %15
  ret void
}

declare dso_local %struct.int_data* @get_type_data(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
